--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,14 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="text"],input[type="password"], input[type="email"] {
-  @apply w-full border my-1 py-2 px-3 rounded-xl;
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"],
+textarea {
+  @apply w-full border my-1 py-2 px-3 rounded-xl outline-none;
 }
 
-button{
-  @apply bg-gray-300
+button {
+  @apply bg-gray-300;
 }
 
-button.primary{
+button.primary {
   @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
