--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,9 @@ input[type="number"],
 textarea {
   @apply w-full border my-1 py-2 px-3 rounded-xl outline-none;
 }
+textarea {
+  height: 140px
+}
 
 button {
   @apply bg-gray-300;
